# homarr-container-adapter

./: AGENTS.md  Cargo.toml  README.md  lefthook.yml  run
.github/scripts/: build-deb-package.sh  check-hardcoded-hostnames.sh  rename-packages.sh
debian/: control  homarr-container-adapter.service  postinst  rules
docs/: ARCHITECTURE.md  SPEC.md
etc/: config.toml
src/: authelia.rs  branding.rs  config.rs  docker.rs  error.rs  homarr.rs  main.rs  registry.rs  state.rs
